--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <section id="Intro" class="section intro">
         <div class="w-layout-blockcontainer container intro-container w-container">
             <div class="label"></div>
-            <p class="intro-text-white">Building <a href="https://x.com/search?q=%24Siri&amp;src=cashtag_click">$BOTRO</a>, the AI assistant bot for crypto trading.  Expert in TA, market research &amp; strategies. Empowering traders to spot patterns &amp; win big<br/></p>
+            <p class="intro-text-white">Building <a href="https://x.com/search?q=%24Siri&amp;src=cashtag_click">$BOTRO</a>, the Faster bot for crypto trading.  Support all route &amp; of course the gas costs are very cheap. Automatic Take-Profit & Stop-Loss - Presenting AutoSell Profiles/Copytrade <br/></p>
         </div>
     </section>
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=678002b05def6cc3379be8e5" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
