--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <section>
         <div class="w-layout-blockcontainer container intro-container w-container">
             <div class="label"></div>
-            <p class="intro-text-white">Contract Address<a href="https://x.com/search?q=%24Siri&amp;src=cashtag_click"> $BOTRO AI AGENT</a>
+            <p class="intro-text-white">Contract Address <a href="https://x.com/search?q=%24Siri&amp;src=cashtag_click"> @Bo</a>
     </section>
     <section id="Intro" class="section intro">
         <div class="w-layout-blockcontainer container intro-container w-container">
