--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>$BOTRO AI AGENT</title>
+    <title>$BOTRO AI AGENT BOT TRADING</title>
     <meta content="Enigma Studio | Webflow HTML website template" property="og:title" />
     <meta content="https://cdn.prod.website-files.com/6703321c58a02eadf2546669/6704120da73efdd2e2a7a89e_enigma-ai-studio.webflow.io_%20(4).avif" property="og:image" />
     <meta content="Enigma Studio | Webflow HTML website template" property="twitter:title" />
