--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <section>
         <div class="w-layout-blockcontainer container intro-container w-container">
             <div class="label"></div>
-            <p class="intro-text-white">Contract Address <a href="https://x.com/search?q=%24Siri&amp;src=cashtag_click"> 0x384d03c4ac381aeb7fa2ec7eed6260c3fee1f59b6381bc24a56792cf0f8f1f51::botro::BOTRO</a>
+            <p class="intro-text-white">Contract Address <a href="https://x.com/search?q=%24Siri&amp;src=cashtag_click"> Soon</a>
     </section>
     <section id="Intro" class="section intro">
         <div class="w-layout-blockcontainer container intro-container w-container">
